@@ -123,7 +123,8 @@ Param(
 )
      # if debug=1 then output
      if ($DEBUG -gt 0) {
-          echo "DEBUG:${error_message}"
+          $MYTIME=Get-Date -Format o
+          echo "${MYTIME} DEBUG:${error_message}"
      }
 }
 
@@ -384,11 +385,17 @@ Param(
                else {
                     $assysdbaconnect=""
                }
-               #$TNSALIAS="$the_host`:$the_port/$sqlsid"
                $UPPER_SID=$sqlsid.toupper()
-               $TNSALIAS="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=$the_host)(PORT=$the_port))(CONNECT_DATA=(SID=$UPPER_SID)))"
-               # we presume we can use an EZconnect
-               $SQL_CONNECT="$the_user/$the_password@$TNSALIAS$assysdbaconnect"
+
+               # use oracle wallet if requested in cfg file
+               if ($the_user -like "/" ) {
+                    $SQL_CONNECT="/@$UPPER_SID$assysdbaconnect"
+               }
+               else {
+                    $TNSALIAS="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=$the_host)(PORT=$the_port))(CONNECT_DATA=(SID=$UPPER_SID)))"
+                    # we presume we can use an EZconnect
+                    $SQL_CONNECT="$the_user/$the_password@$TNSALIAS$assysdbaconnect"
+               }
                debug_echo "value of sql_connect in dbuser = $SQL_CONNECT"
           } else {
                debug_echo "DBUSER is not defined"
@@ -1269,7 +1276,7 @@ $list_inst=(get-service -Name "Oracle*Service*" -include "OracleService*", "Orac
 # the following line ensures that the output of the files generated by calling
 # Oracle SQLplus through Powershell are not limited to 80 character width. The
 # 80 character width limit is the default
-$Host.UI.RawUI.BufferSize = New-Object Management.Automation.Host.Size (512, 50)
+$Host.UI.RawUI.BufferSize = New-Object Management.Automation.Host.Size (512, 150)
 
 # We have to set some value for the ORACLE_SID, although here a nonsense value
 # This value is used when we want to simply list all the banners
@@ -1420,6 +1427,10 @@ if ($the_count -gt 0) {
                }
           }
      }
+     # We need an line break after last output from sections
+     # otherwise the agent adds <<<local>>> as parameter to the last line of plugin
+     echo ""
+
 }
 debug_echo "got to the end"
 
