@@ -11,6 +11,7 @@
     * 4094 apc_rackpdu_power: now detects all phases or banks connected to this pdu
             NOTE: Please refer to the migration notes!
     * 3993 Some minor performance improvements during config generation...
+    * 4116 mk_oracle.ps1: added Oracle wallet support to Windows plugin...
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
     * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
